// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutProvider Field events fieldBlurred listens the fieldBlurred event and change the state of the focusedField to the data receive 1`] = `Object {}`;

exports[`LayoutProvider Field events fieldClicked listens the fieldClicked event and change the state of the focusedField to the data receive 1`] = `
Object {
  "fieldName": "radio",
  "label": "Radio Field",
  "localizedValue": Object {},
  "options": Array [
    Object {
      "label": "Option 1",
      "value": "option1",
    },
    Object {
      "label": "Option 2",
      "value": "option2",
    },
  ],
  "readOnly": true,
  "settingsContext": Object {
    "currentPage": 0,
    "pages": Array [
      Object {
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "fields": Array [
                  Object {
                    "defaultLanguageId": "en_US",
                    "editingLanguageId": "en_US",
                    "fieldName": "label",
                    "localizable": true,
                    "localizedValue": Object {
                      "en_US": "Radio Field",
                    },
                    "settingsContext": Object {
                      "pages": Array [
                        Object {
                          "rows": Array [
                            Object {
                              "columns": Array [],
                            },
                          ],
                        },
                      ],
                    },
                    "value": "Radio Field",
                  },
                  Object {
                    "defaultLanguageId": "en_US",
                    "editingLanguageId": "en_US",
                    "fieldName": "name",
                    "localizedValue": Object {
                      "en_US": undefined,
                    },
                    "value": undefined,
                  },
                  Object {
                    "defaultLanguageId": "en_US",
                    "editingLanguageId": "en_US",
                    "fieldName": "required",
                    "localizedValue": Object {
                      "en_US": undefined,
                    },
                    "value": undefined,
                  },
                  Object {
                    "defaultLanguageId": "en_US",
                    "editingLanguageId": "en_US",
                    "fieldName": "type",
                    "localizedValue": Object {
                      "en_US": undefined,
                    },
                    "value": undefined,
                  },
                  Object {
                    "defaultLanguageId": "en_US",
                    "editingLanguageId": "en_US",
                    "fieldName": "validation",
                    "localizedValue": Object {
                      "en_US": Object {},
                    },
                    "validation": Object {
                      "fieldName": "radio",
                    },
                    "value": Object {},
                  },
                ],
                "size": 12,
              },
            ],
          },
        ],
      },
    ],
  },
  "type": "radio",
  "value": undefined,
  "visible": true,
}
`;

exports[`LayoutProvider Field events fieldDuplicated listens the duplicate field event and add this field in the pages 1`] = `
Array [
  Object {
    "description": "Page Description",
    "localizedDescription": Object {},
    "localizedTitle": Object {
      "en_US": "Localized Title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "name0000",
                "fieldReference": "name0000",
                "instanceId": "Any<String>",
                "label": "Radio Field",
                "localizedValue": Object {},
                "name": "name0000",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "instanceId": "Any<String>",
                                  "localizable": true,
                                  "localizedValue": Object {
                                    "en_US": "Radio Field",
                                  },
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                  "instanceId": "Any<String>",
                                  "value": "Liferay",
                                },
                                Object {
                                  "fieldName": "required",
                                  "instanceId": "Any<String>",
                                },
                                Object {
                                  "fieldName": "type",
                                  "instanceId": "Any<String>",
                                },
                                Object {
                                  "fieldName": "validation",
                                  "instanceId": "Any<String>",
                                  "value": Object {},
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "name0010",
                "fieldReference": "name0010",
                "instanceId": "Any<String>",
                "label": "copy-of-x",
                "localizedValue": Object {},
                "name": "name0010",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "defaultLanguageId": "en_US",
                                  "editingLanguageId": "en_US",
                                  "fieldName": "label",
                                  "instanceId": "Any<String>",
                                  "localizable": true,
                                  "localizedValue": Object {
                                    "en_US": "copy-of-x",
                                  },
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                  "value": "copy-of-x",
                                },
                                Object {
                                  "defaultLanguageId": "en_US",
                                  "editingLanguageId": "en_US",
                                  "fieldName": "name",
                                  "instanceId": "Any<String>",
                                  "localizedValue": Object {
                                    "en_US": "Any<String>",
                                  },
                                  "value": "Liferay",
                                },
                                Object {
                                  "defaultLanguageId": "en_US",
                                  "editingLanguageId": "en_US",
                                  "fieldName": "required",
                                  "instanceId": "Any<String>",
                                  "localizedValue": Object {
                                    "en_US": "Any<String>",
                                  },
                                  "value": undefined,
                                },
                                Object {
                                  "defaultLanguageId": "en_US",
                                  "editingLanguageId": "en_US",
                                  "fieldName": "type",
                                  "instanceId": "Any<String>",
                                  "localizedValue": Object {
                                    "en_US": "Any<String>",
                                  },
                                  "value": undefined,
                                },
                                Object {
                                  "defaultLanguageId": "en_US",
                                  "editingLanguageId": "en_US",
                                  "fieldName": "validation",
                                  "instanceId": "Any<String>",
                                  "localizedValue": Object {
                                    "en_US": "Any<String>",
                                  },
                                  "validation": Object {
                                    "fieldName": "Any<String>",
                                  },
                                  "value": Object {
                                    "expression": undefined,
                                  },
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
                "validation": Object {
                  "expression": undefined,
                },
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "name0020",
                "fieldReference": "name0020",
                "instanceId": "Any<String>",
                "label": "Text Field 1",
                "localizedValue": Object {},
                "name": "name0020",
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
              Object {
                "fieldName": "name1020",
                "fieldReference": "name1020",
                "instanceId": "Any<String>",
                "label": "Text Field 2",
                "localizedValue": Object {},
                "name": "name1020",
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "name0120",
                "fieldReference": "name0120",
                "instanceId": "Any<String>",
                "label": "Select Field",
                "localizedValue": Object {},
                "name": "name0120",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "name0030",
                "fieldReference": "name0030",
                "instanceId": "Any<String>",
                "label": "Date Field",
                "localizedValue": Object {},
                "name": "name0030",
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "name0040",
                "fieldReference": "name0040",
                "instanceId": "Any<String>",
                "label": "Numeric Field",
                "localizedValue": Object {},
                "name": "name0040",
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`LayoutProvider Field events fieldMoved listens to the fieldMoved event and move the field to the column in pages 1`] = `
Array [
  Object {
    "description": "Page Description",
    "localizedDescription": Object {},
    "localizedTitle": Object {
      "en_US": "Localized Title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "localizedValue": Object {
                                    "en_US": "Radio Field",
                                  },
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                                Object {
                                  "fieldName": "validation",
                                  "value": Object {},
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "localizedValue": Object {},
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`LayoutProvider Field events fieldMoved listens to the pagesUpdated event 1`] = `
Array [
  Object {
    "description": "Page Description",
    "localizedDescription": Object {},
    "localizedTitle": Object {
      "en_US": "Localized Title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "localizedValue": Object {
                  "en_US": "Radio Field",
                },
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "localizedValue": Object {
                                    "en_US": "Radio Field",
                                  },
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                                Object {
                                  "fieldName": "validation",
                                  "value": Object {},
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "options": Array [],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "options": Array [],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "options": Array [],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "options": Array [],
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`LayoutProvider Field events fieldMoved moves the field to the column in pages and remove the row if there are no fields 1`] = `
Array [
  Object {
    "description": "Page Description",
    "localizedDescription": Object {},
    "localizedTitle": Object {
      "en_US": "Localized Title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "localizedValue": Object {
                                    "en_US": "Radio Field",
                                  },
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                                Object {
                                  "fieldName": "validation",
                                  "value": Object {},
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "localizedValue": Object {},
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`LayoutProvider Field events fieldMoved moves the field to the row in pages and remove the row if there are no fields 1`] = `
Array [
  Object {
    "description": "Page Description",
    "localizedDescription": Object {},
    "localizedTitle": Object {
      "en_US": "Localized Title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "localizedValue": Object {},
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "localizedValue": Object {
                                    "en_US": "Radio Field",
                                  },
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                                Object {
                                  "fieldName": "validation",
                                  "value": Object {},
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "localizedValue": Object {},
                "nestedFields": Array [],
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
]
`;

exports[`LayoutProvider Field events focusedFieldUpdated listens the focusedFieldEvaluationEnded event and change the state of the focusedField and pages for the data wich was received 1`] = `
Object {
  "fieldName": "TextField",
  "instanceId": Any<String>,
  "label": "Text Field",
  "name": "TextField",
  "required": true,
  "settingsContext": Object {
    "pages": Array [
      Object {
        "rows": Array [
          Object {
            "columns": Array [
              Object {
                "fields": Array [
                  Object {
                    "fieldName": "label",
                    "localizable": true,
                    "localizedValue": Object {
                      "en_US": "Text Field",
                    },
                    "type": "text",
                    "value": "Text Field",
                    "visible": true,
                  },
                  Object {
                    "fieldName": "name",
                    "value": "TextField",
                    "visible": true,
                  },
                  Object {
                    "fieldName": "required",
                    "value": true,
                    "visible": true,
                  },
                  Object {
                    "fieldName": "showLabel",
                    "value": false,
                    "visible": true,
                  },
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  "showLabel": false,
}
`;

exports[`LayoutProvider Field events pageAdded listens the pageAdded event and change the state of pages for the data wich was received 1`] = `
Array [
  Object {
    "description": "Page Description",
    "localizedDescription": Object {},
    "localizedTitle": Object {
      "en_US": "Localized Title",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "radio",
                "label": "Radio Field",
                "localizedValue": Object {},
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "settingsContext": Object {
                  "pages": Array [
                    Object {
                      "rows": Array [
                        Object {
                          "columns": Array [
                            Object {
                              "fields": Array [
                                Object {
                                  "fieldName": "label",
                                  "localizable": true,
                                  "localizedValue": Object {
                                    "en_US": "Radio Field",
                                  },
                                  "settingsContext": Object {
                                    "pages": Array [
                                      Object {
                                        "rows": Array [
                                          Object {
                                            "columns": Array [],
                                          },
                                        ],
                                      },
                                    ],
                                  },
                                },
                                Object {
                                  "fieldName": "name",
                                },
                                Object {
                                  "fieldName": "required",
                                },
                                Object {
                                  "fieldName": "type",
                                },
                                Object {
                                  "fieldName": "validation",
                                  "value": Object {},
                                },
                              ],
                              "size": 12,
                            },
                          ],
                        },
                      ],
                    },
                  ],
                },
                "type": "radio",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 3,
          },
          Object {
            "fields": Array [],
            "size": 9,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "text1",
                "label": "Text Field 1",
                "localizedValue": Object {},
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
              Object {
                "fieldName": "text2",
                "label": "Text Field 2",
                "localizedValue": Object {},
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "text",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 4,
          },
          Object {
            "fields": Array [
              Object {
                "fieldName": "select",
                "label": "Select Field",
                "localizedValue": Object {},
                "options": Array [
                  Object {
                    "label": "Option 1",
                    "value": "option1",
                  },
                  Object {
                    "label": "Option 2",
                    "value": "option2",
                  },
                ],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "select",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 6,
          },
          Object {
            "fields": Array [],
            "size": 2,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "date",
                "label": "Date Field",
                "localizedValue": Object {},
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "date",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
      Object {
        "columns": Array [
          Object {
            "fields": Array [
              Object {
                "fieldName": "numeric",
                "label": "Numeric Field",
                "localizedValue": Object {},
                "options": Array [],
                "readOnly": true,
                "required": true,
                "settingsContext": Object {
                  "pages": Array [],
                },
                "type": "numeric",
                "value": undefined,
                "visible": true,
              },
            ],
            "size": 12,
          },
        ],
      },
    ],
    "title": "Untitled name",
  },
  Object {
    "description": "",
    "enabled": true,
    "localizedDescription": Object {
      "en_US": "",
    },
    "localizedTitle": Object {
      "en_US": "",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [],
            "size": 12,
          },
        ],
      },
    ],
    "showRequiredFieldsWarning": true,
    "title": "",
  },
]
`;

exports[`LayoutProvider Field events pageDeleted listens the pageDeleted event and change the state of pages for the data wich was received 1`] = `Array []`;

exports[`LayoutProvider Field events pageReset listens the pageReset event and change the state of pages for the data wich was received 1`] = `
Array [
  Object {
    "description": "",
    "enabled": true,
    "localizedDescription": Object {
      "en_US": "",
    },
    "localizedTitle": Object {
      "en_US": "",
    },
    "rows": Array [
      Object {
        "columns": Array [
          Object {
            "fields": Array [],
            "size": 12,
          },
        ],
      },
    ],
    "showRequiredFieldsWarning": true,
    "title": "",
  },
]
`;

exports[`LayoutProvider receives ruleAdded event to save a rule 1`] = `
Array [
  Object {
    "actions": Array [
      Object {
        "action": "require",
        "expression": "[x+2]",
        "label": "label text 1",
        "target": "text1",
      },
    ],
    "conditions": Array [
      Object {
        "operands": Array [
          Object {
            "type": "field",
            "value": "text1",
          },
          Object {
            "type": "value",
            "value": "value 2",
          },
        ],
        "operator": "equals-to",
      },
    ],
    "logical-operator": "OR",
  },
  Object {
    "action": "calculate",
    "expression": "22+2",
    "label": "liferay",
    "target": "liferay",
  },
]
`;
